# image-web-app

./: .flaskenv  README.md  app.py  development.txt  pyproject.toml  requirements.txt
imgwebapp/: __init__.py  auth.py  db.py  image.py  project.sql
imgwebapp/static/js/: gallery.js  index.js
imgwebapp/templates/: base.html  gallery.html  index.html  test.html
instance/: config.py
static/css/: login.css
static/js/: index.js
templates/: gallery.html  index.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_gallery.py
tests/samples/: hello.py
